--- a/src/App.css
+++ b/src/App.css
@@ -11,4 +11,11 @@
   padding: 20px;
   margin: 8rem auto 0 auto;
   flex: 1;
+}@media  (max-width: 780px) {
+  .cards{
+    margin: 5rem auto 0 auto;
+    width: 90%;
+    flex-direction: column;
+    align-items: center;
+  }
 }
