--- a/src/component/NavBar/navBar.css
+++ b/src/component/NavBar/navBar.css
@@ -101,7 +101,7 @@
       display: flex;
       flex-direction: column;
       position: absolute;
-      top: 110%;
+      top: 100%;
       left: 0;
       width: 100%;
       height: 200vh;
@@ -156,7 +156,7 @@
   
   @media screen and (max-width: 380px){
     .navbar {
-      padding: 20px;
+      padding: 25px 30px;
     }
     .navbar__logo a {
       font-size: 1rem;
